userlists now ordered by cons_mu rather than mu, templates now display cons_mu in place of mu

--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -48,14 +48,12 @@
 
       <tr>
         <td>
-          {% set global_skill = user.trueskills[0].mu - 3*user.trueskills[0].sigma %}
-          <h3><b>{{user.trueskills[0].region}} Rating:</b> {{user.trueskills[0].mu|round(4, 'common')}} <!-- , σ: {{user.trueskills[0].sigma|round(4, 'common')}}--> </h3>
+          <h3><b>{{user.trueskills[0].region}} Rating:</b> {{user.trueskills[0].cons_mu|round(4, 'common')}} <!-- , σ: {{user.trueskills[0].sigma|round(4, 'common')}}--> </h3>
         </td>
 
         {% if user.trueskills[1] %}
-          {% set region_skill = user.trueskills[1].mu - 3*user.trueskills[1].sigma %}
           <td>
-            <h3><b>{{user.trueskills[1].region}} Rating:</b> {{user.trueskills[1].mu|round(4, 'common')}} <!-- , σ: {{user.trueskills[1].sigma|round(4, 'common')}}--> </h3>
+            <h3><b>{{user.trueskills[1].region}} Rating:</b> {{user.trueskills[1].cons_mu|round(4, 'common')}} <!-- , σ: {{user.trueskills[1].sigma|round(4, 'common')}}--> </h3>
           </td>
         {% endif %}
     </table>
