parse_challonge_run now takes date and region as required parameters. fixed some bugs for dates, template now displays 20XX if date unknown

--- a/app/templates/tournament.html
+++ b/app/templates/tournament.html
@@ -22,7 +22,7 @@
           {% if tournament.date %}
             <h3><b>Date</b>: {{tournament.date}}</h3>
           {% else %}
-            <h3><b>Date</b>: Unknown</h3>
+            <h3><b>Date</b>: 20XX</h3>
           {% endif %}
         </td>
       <tr>
