added info to FAQ, date now converted exclusively in parse_challonge_run (raw date passed from parse_challonge_tournamentlist), edit tournament lists

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -66,12 +66,16 @@
             <li><h4><b>How many sets per player are taken into rating?</b></h4>
             Currently, all sets a player has ever played. This is subject to change in the future, to the last (most recent) x number of sets.
             </li>
+
+            <li><h4><b>Why do some tournaments have placements that suddenly jump into the thousandths?</b></h4>
+            Unless it's EVO, those are pool placements. For example, 7th in your pool grants you a 1007th placing. Players are not assigned a pool placement if they advanced to the final bracket, and instead only have a final bracket placement, as only one placement per tournament is permitted.
+            </li>
           </ul>
         </li>
 
         <li>
           <h4><b>How do you account for players who may use alternate tags in different tournaments?</b></h4>
-          The application automatically can detect different spellings and different team/sponsor information for players. If a player uses completely different tags between tournaments, the application can remember alternate names, but that number will be limited to prevent abuse of the system. Players can also be merged after a tournament is processed.
+          The application automatically can detect different spellings and different team/sponsor information for players, provided a player registers his/her tag. If a player uses completely different tags between tournaments, the application can remember alternate names, but that number will be limited to prevent abuse of the system. Players can also be merged after a tournament is processed.
           <ul>
             <li>
               <h4><b>Seems that I'm listed under multiple tags - I thought the program would automatically do this?</h4></b>
@@ -85,7 +89,7 @@
 
             <li>
               <h4><b>How do you deal with people from different regions having the same tag?</b></h4>
-              In these instances, their tag will be prefaced by their region's name, as if it were a sponsor. For example, Norcal | PewPewU. As for players in the same region having the same tag, that is probably an issue that should be addressed outside of this app.
+              In these instances, their tag will be suffixed by their region's name, i.e. FalcoMaster3000 (NorCal). As for players in the same region having the same tag, that is probably an issue that should be addressed outside of this app.
             </li>
           </ul>
         </li>
@@ -93,8 +97,8 @@
         <li><h4><b>There seems to be some missing information on the page. Can I help?</b></h4></li>
           Yes! Only so much can be done through automation, so info like player's alternate tags, characters, sometimes tournament's dates, and more need to be provided by the community. We can only automatically offer what we scrape from tournament brackets. Please tweet at us or contact us using our media links at the bottom of the page if you can offer any info!
           <ul>
-            <li><h4><b>Why do some tournaments have bizzarre dates set years into the future?</b></h4></li>
-            Because 20XX. Actually though, those dates are automatically entered if the program can't locate a date for a bracket automatically, so that the community can easily spot them and fix them with the correct info.
+            <li><h4><b>Why do some tournaments take place in 20XX?</b></h4></li>
+            Because they year is... Actually though, those dates are automatically entered if the program can't locate a date for a bracket automatically, so that the community can easily spot them and fix them with the correct info.
           </ul>
 
          <li>
