added tags for sanitation, tournaments now display 20XX if date unknown, and changed database temporarily

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,6 +16,9 @@
   	<div class="caption scroll400">
 	  	<h4><b>Recent Updates</b></h4>
 	  	<ul>
+        <b>August 22, 2015</b>
+        <li>Regions SoCal, North Carolina added!</li>
+
 	  		<b>August 11, 2015</b>
 	  		<li>Sets between players of the same region no longer updates global TrueSkill rating.</li>
 	  		<li>Number of sets played is a bigger factor in determining TrueSkill rating.</li>
