added documentation for several files, moved tournamentlist txt files and other population files to db_population, added sponsor logo

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -103,14 +103,14 @@
           <li><a href="{{url_for('about')}}">About</a></li>
           <li><a href="{{url_for('browse_tournaments')}}">Tournaments</a></li>
           <li><a href="{{url_for('browse_users')}}">Players</a></li>
-          <li><a href="{{url_for('browse_characters')}}">Characters</a></li>
           <li><a href="{{url_for('head_to_head')}}">Head to Head</a></li>
           <li>
             <form class="navbar-form" action="{{url_for('search')}}" method="post" name="search">
-              {{g.search_form.hidden_tag()}}{{g.search_form.search(size=12, class="form-control")}}
+              {{g.search_form.hidden_tag()}}{{g.search_form.search(size=10, class="form-control")}}
               <input type="submit" class="btn-primary form-control" value="Search">
             </form>
           </li>
+          <li><img src="static/big_blue_powered_by.png" alt="Big Blue eSports" style="width:64px;height:64px;"></li>
         </ul> 
       </div>
       <!-- /.navbar-collapse -->
