--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -110,7 +110,7 @@
               <input type="submit" class="btn-primary form-control" value="Search">
             </form>
           </li>
-          <li><img src="static/big_blue_powered_by.png" alt="Big Blue eSports" style="width:64px;height:64px;"></li>
+          <li><img src="../static/big_blue_powered_by.png" alt="Big Blue eSports" style="width:64px;height:64px;"></li>
         </ul> 
       </div>
       <!-- /.navbar-collapse -->
