fixed bug in parse_challonge_tournamentlist, now passes tournament line to parse_challonge_run

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -129,7 +129,7 @@
 
         <li>
           <h4><b>Who are the creators of SmashStats?</b></h4>
-          <a href="{{url_for('user', tag='Tonic')}}"><b>Tonic</b></a>, a Marth main based in New England, and Wyne, a Falco player studying in SoCal.
+          <a href="{{url_for('user', tag='Tonic [New England]')}}"><b>Tonic</b></a>, a Marth main based in New England, and Wyne, a Falco player studying in SoCal.
         </li>
 
       </ul>
