--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -16,8 +16,13 @@
   	<div class="caption scroll400">
 	  	<h4><b>Recent Updates</b></h4>
 	  	<ul>
+        <b>September 1, 2015</b>
+        <li>The database will be updated weekly, every Wednesday. All tournament brackets in the queue will be uploaded, as well as changes to player information.</li>
+        <br>
+
         <b>August 22, 2015</b>
         <li>Regions SoCal, North Carolina added!</li>
+        <br>
 
 	  		<b>August 11, 2015</b>
 	  		<li>Sets between players of the same region no longer updates global TrueSkill rating.</li>
