--- a/app/templates/region.html
+++ b/app/templates/region.html
@@ -4,8 +4,8 @@
 <div class="container">
 	<div class="jumbotron">
 		<h1>{{region}}</h1>
-		<h2><b>Population:</b> {{current_region.users|length}}</h2><a href="{{url_for('browse_users')}}"><b>(view region's players)</b></a>
-		<h2><b>Tournament Count:</b> {{current_region.tournaments|length}}</h2><a href="{{url_for('browse_tournaments')}}"><b>(view region's tournaments)</b></a>
+		<h2><b>Population:</b> {{current_region.users|length}}</h2><a href="{{url_for('browse_users', region=g.region)}}"><b>(view region's players)</b></a>
+		<h2><b>Tournament Count:</b> {{current_region.tournaments|length}}</h2><a href="{{url_for('browse_tournaments', region=g.region)}}"><b>(view region's tournaments)</b></a>
 	</div>
 </div>
 
