--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -4,6 +4,7 @@
 <div class="container">
   <header class="jumbotron">
     <h1>About SmashStats</h1>
+    <p> This is a local version of live smashstats for claremont. that is all. </p>
 
     <p>The application recognizes and sorts players by tag, and associates them with the sets and tournaments they have played in. Once players have been recorded in the database, the program attempts to match all references to them to their tag. Currently, Smashstats only accepts bracket data from Challonge, meaning that no match information can be automatically generated. Additionally, player information about regions, main, and secondary characters requires input from the larger community.</p>
 
