--- a/app/templates/browse_tournaments.html
+++ b/app/templates/browse_tournaments.html
@@ -1,4 +1,4 @@
-<!-- A list of all Tournament objects in the database-->
+<!-- A list of Tournament objects in the database-->
 {% extends "base.html" %}
 
 {% block content %}
@@ -11,7 +11,7 @@
 	<div class="panel-body">
 		<table class="table bootstrap-datatable table-striped table-hover">
 			<thead>
-				{% include 'tournament_display_head.html' %}
+				{% include 'tournament_display_titles.html' %}
 			</thead>
 
 			<tbody>
