--- a/app/templates/tournament_header_display_titles.html
+++ b/app/templates/tournament_header_display_titles.html
@@ -1,4 +1,4 @@
-<!-- tournament_display header (tournament table column titles) -->
+<!-- tournament_display columns (tournament table column titles) -->
 <tr>
 	<th class="text-center "><h4><b>Date</h4></b></th>
 	<th class="text-center"><h4><b>Name</b></h4></th>
