--- a/app/templates/tournament_display.html
+++ b/app/templates/tournament_display.html
@@ -11,11 +11,11 @@
 	</b></td>
 
 	<td class="col-sm-3 mobile-horizontal-overflow-td-col-3 text-center">
-		<a href="{{ url_for('tournament', tournament_header=tournament.header.name, sub_tournament=tournament.name)}}"><b>{{tournament.name}}</a></b>
+		<a href="{{url_for('tournament', tournament_header=tournament.header.name, sub_tournament=tournament.name)}}"><b>{{tournament.name}}</a></b>
 	</td>
 	
 	<td class="col-sm-3 text-center"><b>
-		{% if tournament.entrants != -1 %}
+		{% if tournament.entrants > 0 %}
 			{{tournament.entrants}}
 		{% else %}
 			Unknown
@@ -24,7 +24,7 @@
 
 	<td class="col-sm-3 mobile-horizontal-overflow-td-col-3 text-center">
 		{% if tournament.region %}
-			<b><a href="{{ url_for("region", region=tournament.region) }}">{{tournament.region}}</a></b>
+			<b><a href="{{url_for("region", region=tournament.region)}}">{{tournament.region}}</a></b>
 		{% else %}
 			{{tournament.region}}
 		{% endif %}
