--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -31,7 +31,7 @@
 	<div class="panel-body">
 		<table class="table bootstrap-datatable table-striped table-hover">
 			<thead>
-				{% include 'tournament_display_head.html' %}
+				{% include 'tournament_display_titles.html' %}
 			</thead>
 
 			<tbody>
