repo cleanup, small changes to trueskill functions and bugfixing for parse functions

--- a/app/templates/search_results.html
+++ b/app/templates/search_results.html
@@ -35,8 +35,8 @@
 			</thead>
 
 			<tbody>
-				{% for tournament in tournament_results %}
-					{% include 'tournament_display.html' %}
+				{% for tournament_header in tournament_results %}
+					{% include 'tournament_header_display.html' %}
 				{% endfor %}
 			</tbody>
 		</table>
