--- a/app/templates/tournament_display_titles.html
+++ b/app/templates/tournament_display_titles.html
@@ -2,6 +2,6 @@
 <tr>
 	<th class="text-center "><h4><b>Date</h4></b></th>
 	<th class="text-center"><h4><b>Name</b></h4></th>
-	<th class="text-center"><h4><b>Size</b></h4></th>
+	<th class="text-center"><h4><b>Entrants</b></h4></th>
 	<th class="text-center"><h4><b>Region</b></h4></th>
 </tr>
